<resources>
    <string name="app_name">ShopSmart</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured_products">Featured Products(Most Sold) </string>
    <string name="shop_now">Shop Now</string>
    <string name="welcome_to_shopsmart">Welcome to ShopSmart!</string>
    <string name="vegetables">Vegetables</string>
    <string name="hometools">HomeTools</string>
    <string name="butchery">Butchery</string>
    <string name="bakery">Bakery</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="back_to_my_orders">Back To My Orders</string>
    <string name="mark_ready">Mark Ready</string>
    <string name="mark_shipped">Mark Shipped</string>
    <string name="status_processing">Status: Processing</string>
    <string name="log_out">Log Out</string>
    <string name="add_product">Add Product</string>
    <string name="mark_delivered">Mark Delivered</string>
    <string name="admin_view_orders">Admin - View Orders</string>
    <string name="admin_control_panel">Admin - Control Panel</string>
    <string name="my_orders">My Orders</string>
    <string name="back_to_profile">Back To Profile</string>
    <string name="quantity">Quantity</string>
    <string name="upload_image">Upload Image</string>
    <string name="department">Department</string>
    <string name="view_orders">View Orders</string>
    <string name="back_to_admin_page">Back To Admin Page</string>
    <string name="total_cart_0_00">Total Cart: $0.00</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="date_n_a">Date: N/A</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>