<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/bg_color">

    <TextView
        android:id="@+id/tvAdminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_control_panel"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnViewOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_orders"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"
            android:padding="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
