<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total: $0.00"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/orderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_processing"
        android:textSize="16sp"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/orderTotal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/orderTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date: N/A"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/orderStatus"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderItemsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnBackToMyOrders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />
    <LinearLayout
        android:id="@+id/orderBtnsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/orderTimestamp"
        app:layout_constraintStart_toStartOf="parent">
    <Button
        android:id="@+id/btnOrderReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/mark_ready"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btnOrderShipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/mark_shipped"
        android:layout_weight="1"/>
        <Button
            android:id="@+id/btnOrderDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/mark_delivered"
            android:layout_weight="1"/>
    </LinearLayout>
        <Button
            android:id="@+id/btnBackToMyOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="Back To Admin View Orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderBtnsLayout"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
