<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/bg_color">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/shopsmart_transparent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_shopsmart"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="12dp" />

    <!-- Shop Now Button -->
    <Button
        android:id="@+id/shopNowButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/shop_now"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Featured Products Section -->
    <TextView
        android:id="@+id/featuredTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured_products"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/shopNowButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_top" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/featuredProductsList"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:padding="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/featuredTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"/>


</androidx.constraintlayout.widget.ConstraintLayout>
